<resources>
    <!-- App -->
    <string name="app_name">Food Finder App</string>

    <!-- Menü -->
    <string name="action_settings">Einstellungen</string>
    <string name="action_about">Über diese App</string>

    <!-- About -->
    <string name="dialog_title">Über Food Finder App</string>
    <string name="dialog_message">Version 1.0\r\n© by Livio Kunz, Muhamed Delic</string>

    <!-- MainActivity -->
    <string name="button_start">Produkt suchen...</string>
    <string name="button_connect">Verbinde mit Smart Glasses</string>
    <string name="button_send">Sende Produkt</string>

    <!-- Settings -->
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

        <!-- Servereinstellungen -->
        <string name="pref_server_profile">Verbindung zur Smart Glasses</string>
        <string name="pref_server_ip">Server IP Adresse</string>
        <string name="pref_server_ip_summary">Die Adresse für den Server</string>
        <string name="pref_server_port">Port</string>
        <string name="pref_server_port_summary">Port für die Verbindung definieren</string>

    <!-- Fehlermeldungen -->
    <string name="err_noconnection">Keine Verbindung zur Smart Glasses</string>


    <!-- Infomeldungen -->
    <string name="info_send">Produkt wurde erfolgreich übermittelt.</string>

</resources>
