<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_server_profile" >
        <EditTextPreference
            android:title="@string/pref_server_ip"
            android:summary="@string/pref_server_ip_summary"
            android:key="prefIPAddress"
            android:textSize="18pt"/>
        <EditTextPreference
            android:title="@string/pref_server_port"
            android:summary="@string/pref_server_port_summary"
            android:numeric="integer"
            android:key="prefPort"
            android:textSize="18pt"/>
    </PreferenceCategory>

    <!--
    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>

        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary"
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/pref_sync_frequency" />
    </PreferenceCategory>
    -->
</PreferenceScreen>